k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice-example
  labels:
    app.kubernetes.io/name: microservice-example
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: microservice-example
  ports:
    - name: http
      port: 8080
      targetPort: http
